added next handler logic
