# api/controllers/start.js
@@ -9,27 +9,19 @@ const objectPath = require('simple-object-path');
 
 const start = (req, res)=>{
   const questionnaireId = objectPath(req,'swagger/params/questionnaireId/value');
-  let sessionId;
-  let firstQuestion;
+  const sessionId = objectPath(req,'swagger/params/sessionId/value');
 
-  //create sessionId
-  const createSessionId = (_callback)=>{
-     sessionIdCreator.create((err, newSessionId)=>{
-        if(err)return _callback(err);
-        sessionId = newSessionId;
-        return _callback();
-     });
-  };
+  let _firstQuestion;
 
   //get Questionnaire's questions
-  const getQuestions = (_callback)=>{
+  const getFirstQuestion = (_callback)=>{
     const query = {_id : questionnaireId};
     Questionnaire
       .findOne(query)
       .populate({path : 'questions'})
       .exec((err, questionnaire)=>{
          if(err)return _callback(err);
-         firstQuestion = questionnaire.questions[0];
+         _firstQuestion = questionnaire.questions[0];
          return _callback();
       });
   };
@@ -44,12 +36,12 @@ const start = (req, res)=>{
   };
 
   //use async for flow control
-  async.series([createSessionId, getQuestions, storeSession], (err)=>{
+  async.series([getFirstQuestion, storeSession], (err)=>{
     if(err){
       logger.error(`Issue in Start Api ${err.message}`);
       return res.status(500).send({message: err.message})
     }
-    return res.status(200).send({sessionId : sessionId, question : firstQuestion});
+    return res.status(200).send({question : _firstQuestion});
   });
 }
 
